fixed css and js paths, also fixed gulp css and js builds

--- a/thanks.html
+++ b/thanks.html
@@ -12,7 +12,7 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="description" content="">
         
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/style.min.css">
         
         <title>gulp | Home</title>
     </head>
@@ -61,7 +61,7 @@
         <!-- JS -->
         <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
-        <script src="assets/js/app.js"></script>
+        <script src="assets/js/app.min.js"></script>
     </body>
 
 </html>
