fixed some image paths

--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                         <div data-anchor-target="#helper">
                             <section class="f4">
                                 <div class="f4__container">
-                                    <img class="f4__bgimg1" src="/assets/images/f4-img-2.png" alt="" />
-                                    <img class="f4__bgimg2" src="/assets/images/f4-img-1.png" alt="" />
+                                    <img class="f4__bgimg1" src="assets/images/f4-img-2.png" alt="" />
+                                    <img class="f4__bgimg2" src="assets/images/f4-img-1.png" alt="" />
         
                                     <h2 class="f4__title">Для кого </h2>
                                     <h3 class="f4__subtitle">для бизнеса</h3>
